# SemaFlow

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: concepts.md  configuration.md  dialects.md  expressions.md  modules.md  sql_planning.md
examples/: README.md  demo_python.duckdb  python_demo.py  python_filter_fallback_demo.py  python_objects_demo.py  python_preagg_demo.py  semaflow.toml  semantic_api.py
examples/bigquery/: README.md  demo.py
examples/duckdb/: api_test.duckdb  bench.duckdb  bench_concurrency.py  benchmark.duckdb  demo.py  python_demo.py  python_objects_demo.py  python_preagg_derived_demo.py  sales.duckdb
examples/duckdb/flows/flows/: sales.yaml
examples/duckdb/flows/tables/: orders.yaml
examples/flows/flows/: sales.yaml
examples/flows/tables/: customers.yaml  orders.yaml  products.yaml
examples/postgres/: bench_concurrency.py  demo.py  docker-compose.yml  init.sql
examples/postgres/flows/tables/: customers.yaml  orders.yaml
semaflow/: __init__.py  api.py  handle.py  semaflow.pyi
semaflowrs/: Cargo.toml  ROADMAP.md
semaflowrs/docs/: README.md  architecture.md  join-semantics.md  python-bindings.md  query-lifecycle.md  rust-components.md
semaflowrs/examples/: README.md  demo.duckdb  print_sql.rs  run_print_sql.sh  run_query.rs
semaflowrs/examples/models/models/: sales.yaml
semaflowrs/examples/models/tables/: customers.yaml  orders.yaml
semaflowrs/examples/requests/: sales_country.json
semaflowrs/src/: config.rs  data_sources.rs  dialect.rs  error.rs  executor.rs  expr_parser.rs  expr_utils.rs  flows.rs  lib.rs  models.rs  pagination.rs  query_builder.rs  registry.rs  runtime.rs  schema_cache.rs  sql_ast.rs  validation.rs
semaflowrs/src/backends/: bigquery.rs  duckdb.rs  mod.rs  postgres.rs
semaflowrs/src/dialect/: bigquery.rs  duckdb.rs  mod.rs  postgres.rs
semaflowrs/src/python/: mod.rs
semaflowrs/src/query_builder/: analysis.rs  builders.rs  components.rs  filters.rs  grain.rs  joins.rs  measures.rs  mod.rs  plan.rs  planner.rs  render.rs  resolve.rs
semaflowrs/tests/: integration.rs  query_builder.rs  registry.rs  sql_rendering.rs  unit.rs
semaflowrs/tests/integration/: duckdb_poc.rs  mod.rs
semaflowrs/tests/unit/: flow_introspection.rs  mod.rs  query_builder_alias_qualified.rs  query_builder_join_pruning.rs  query_builder_measures.rs  query_builder_unit.rs  sql_renderer_unit.rs
tests/: conftest.py  inprocess_benchmark.py  load_test_semantic_api.py  simple_benchmark.py  test_api.py  test_handle.py
