[project]
name = "semaflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
duckdb = ["duckdb>=0.10.2"]
api = ["fastapi[standard]>=0.122.0", "uvicorn[standard]>=0.23.0"]
bigquery = []
postgres = []

[dependency-groups]
dev = [
    "maturin>=1.10.2",
]
api = [
    "fastapi[standard]>=0.122.0",
]

[build-system]
requires = ["maturin>=1.10.2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "semaflowrs/Cargo.toml"
features = ["python"]
python-source = "."
python-packages = ["semaflow"]
