[project]
name = "semaflow"
version = "0.1.2"
description = "Semantic layer for analytical databases"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Jack Hart" }
]
keywords = ["semantic-layer", "analytics", "sql", "duckdb", "bigquery", "postgres"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/JCart97/semaflow"
Repository = "https://github.com/JCart97/semaflow"

[project.optional-dependencies]
# Python package extras (install-time dependencies)
# Note: DuckDB/PostgreSQL backends are Rust features (compile-time)
# These extras are for Python-side tooling
duckdb = ["duckdb>=0.10.2"]  # Python DuckDB driver for seeding/testing
api = ["fastapi[standard]>=0.122.0", "uvicorn[standard]>=0.23.0", "orjson>=3.9.0"]
dev = [
    "duckdb>=0.10.2",
    "maturin>=1.10.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
all = ["semaflow[duckdb,api,dev]"]

[dependency-groups]
dev = [
    "maturin>=1.10.2",
    "duckdb>=0.10.2",
]

[build-system]
requires = ["maturin>=1.10.2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "semaflowrs/Cargo.toml"
# Include all backends in the wheel - users may have multiple data sources
features = ["python", "all-backends"]
python-source = "."
python-packages = ["semaflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
